--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,10 @@
 	"description":"Ekstensi chrome pengawas anak",
 	"version":"1.0",
 	"manifest_version":2,
-	"content_scripts":[
+	"background":[
 		{
-			"matches":[
-				"https://*/*","http://*/*"
-			],
-			"js":[
-				"ortu.js"
-			]
+			"scripts":["ortu.js"],
+			"persistent":true
 		}
 	],
 	"browser_action":{
